unpackaged/main/default/objects/Account/fields/Account_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Account_Picklist__c</fullName>
    <label>Account Picklist</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Testing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>