unpackaged/main/default/objects/Account/fields/Account_Text_Box__c.field-meta.xml
<CustomField>
    <fullName>Account_Text_Box__c</fullName>
    <label>Account Text Box</label>
    <length>100</length>
    <type>Text</type>
</CustomField>